<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewPoke"
        android:layout_width="250dp"
        android:layout_height="230dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/morufodaiana" />

    <Button
        android:id="@+id/btnPoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Poke_get"
        android:textSize="34sp"
        app:backgroundTint="#D81B60"
        android:background="@drawable/round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPoke" />

    <TextView
        android:id="@+id/tvPoke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#B4FDD835"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#E53935"
        android:textSize="34sp"
        android:textStyle="bold"
        app:drawableTint="#E53935"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPoke" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPoke">

        <Button
            android:id="@+id/btnans1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btn_ans1"
            android:textSize="20sp"
            app:backgroundTint="#FFA726"
            android:background="@drawable/round_button"/>

        <Button
            android:id="@+id/btnans2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/btn_ans2"
            android:textSize="20sp"
            app:backgroundTint="#FFA726"
            android:background="@drawable/round_button" />

        <Button
            android:id="@+id/btnans3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/btn_ans3"
            android:textSize="20sp"
            app:backgroundTint="#FFA726"
            android:background="@drawable/round_button"/>
    </LinearLayout>

    <TextView
        android:id="@+id/anscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="せいかい"
        android:textColor="#1A237E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="80dp"
        android:layout_height="47dp"
        android:text="スタート"
        android:textSize="10sp"
        app:backgroundTint="#FFA726"
        android:background="@drawable/round_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>